# blog

./: .gitignore  LICENSE  README.md
.github/: FUNDING.yml
arduino/001_blinky_with_delay_function/: 001_blinky_with_delay_function.ino
arduino/002_blinky_with_timer1_ovf/: 002_blinky_with_timer1_ovf.ino
arduino/003_blinky_with_timer1_compa/: 003_blinky_with_timer1_compa.ino
arduino/004_28byj48_stepper_motor_controller/: 004_28byj48_stepper_motor_controller.ino
arduino/005_basic_led_blink/: 005_basic_led_blink.ino
arduino/005_simple_led_blink/: 005_simple_led_blink.ino
arduino/006_led_brightness/: 006_led_brightness.ino
arduino/007_led_linear_fade/: 007_led_linear_fade.ino
arduino/008_led_logarithmic_fade/: 008_led_logarithmic_fade.ino
arduino/uno/002_blinky_with_timer1_ovf/: 002_blinky_with_timer1_ovf.ino
arduino/uno/003_blinky_with_timer1_compa/: 003_blinky_with_timer1_compa.ino
arduino/uno/004_28byj48_stepper_motor_controller/: 004_28byj48_stepper_motor_controller.ino
avr/: clean-all.sh  compile-all.sh
avr/asm/include/: 1200def.inc  2313def.inc  2323def.inc  2343def.inc  4414def.inc  4433def.inc  4434def.inc  8515def.inc  8535def.inc  AT86RF401def.inc  ATA6289def.inc  ATxmega128A1def.inc  ATxmega128A3Udef.inc  ATxmega128A3def.inc  ATxmega128D3def.inc  ATxmega16A4Udef.inc  ATxmega16A4def.inc  ATxmega16D4def.inc  ATxmega192A3Udef.inc  ATxmega192A3def.inc  ATxmega192D3def.inc  ATxmega256A3Bdef.inc  ATxmega256A3Udef.inc  ATxmega256A3def.inc  ATxmega256D3def.inc  ATxmega32A4Udef.inc  ATxmega32A4def.inc  ATxmega32D4def.inc  ATxmega384C3def.inc  ATxmega64A1def.inc  ATxmega64A3Udef.inc  ATxmega64A3def.inc  ATxmega64D3def.inc  can128def.inc  can32def.inc  can64def.inc  m103def.inc  m1280def.inc  m1281def.inc  m1284Pdef.inc  (+151 more)
avr/atmega32/001_blinky_with_delay_function/: Makefile  main.c  main.hex
avr/atmega8/001_blinky_with_delay_function/: Makefile  main.c  main.hex
avr/atmega8/002_uart_debug_logger/: Makefile  main.c  main.hex
avr/atmega8/003_square_wave_generator_1hz_to_25khz/: Makefile  main.c  main.hex  uart.c  vfg.c  vfg.h
avr/atmega8/004_frequency_counter/: Makefile  fc.c  fc.h  main.c  main.hex  uart.c  uart.h
avr/atmega8/005_ws2812_led_strip_blinky/: Makefile  light_ws2812.c  main.c  main.hex  ws2812_config.h
avr/attiny10/001_blinky_with_delay_function/: Makefile  main.c  main.hex
avr/attiny10/010_gaggia_example_timer/: Makefile  main.c
avr/attiny13/: README.md
avr/attiny13/001_blinky_with_delay_function/: Makefile  main.c
avr/attiny85/: README.md
esp32/001_blinky_with_delay_function/: Makefile  README.rst  sdkconfig
esp32/016_wifi_sniffer/: README.rst  sdkconfig
esp32/tools/: build_esp32_toolchain.sh
esp8266/001_blinky_with_delay_function/: README.md  main.c
esp8266/002_blinky_with_timer/: README.md  main.c
esp8266/004_dance_lights_with_fft/: LICENSE  Makefile  README.md  audio.c  audio.h  config.h  error.h  light.c  light.h  main.c  pwm.c  pwm.h  system.c  system.h
esp8266/005_nonos_sdk_blinky/: Makefile  README.md
esp8266/006_esp_idf_blinky/: README.md  sdkconfig
esp8266/010_wifi_beacon_spammer/: Makefile  README.md  sdkconfig
esp8266/016_wifi_sniffer/: Makefile  README.md  main.c
esp8266/blinky/: Makefile
projects/: LICENSE
projects/P001/: Makefile  main.c
stm32/stm32f042/: STM32F042x6_FLASH.ld
stm32/stm32f042/006_cmake_blinky_example/: CMakeLists.txt
stm32/stm32f042/006_cmake_blinky_example/src/: stm32f0xx_hal_conf.h  stm32f0xx_it.c
tools/: README.md  install_arm_none_eabi_toolchain_on_ubuntu.sh
(+1772 files in other folders)
